@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.403 2005/10/01 21:19:25 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.404 2005/10/01 21:38:17 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
@@ -10,6 +10,7 @@
   allow for param to be passed multiple times in GET
   no XMLRPC functions return None
   modify POST request parsing to only create a list if needed
+  fix GET request parsing so the list creation for multiple values works
   src/net/client/gliclient.py:
   various typo and type mismatch fixes
   exit after exception
